# sdl2_metal

./: CMakeLists.txt
src/: main.mm
